# Aeryon

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/server/src/api/: dto.rs  error.rs  event_map.rs  mod.rs  state.rs  tests.rs  time.rs
apps/server/src/api/routes/: calibration.rs  dsp.rs  events.rs  features.rs  health.rs  mod.rs  observations.rs  plugins.rs  runtime.rs  sensors.rs  signal.rs
config/: aeryon.toml
core/acquisition/: Cargo.toml
core/acquisition/src/: lib.rs
core/calibration/: Cargo.toml
core/calibration/src/: errors.rs  frame.rs  lib.rs  pipeline.rs  profile.rs  report.rs  stage.rs
core/calibration/src/stages/: linear_phase_detrend.rs  mod.rs  phase_unwrap.rs  rms_amplitude_normalize.rs
core/config/: Cargo.toml
core/config/src/: lib.rs
core/csi/: Cargo.toml
core/csi/src/: error.rs  fixture.rs  frame.rs  lib.rs
core/domain/: Cargo.toml
core/domain/src/: entity.rs  event.rs  frame.rs  ids.rs  lib.rs  observation.rs  pipeline.rs  sensor.rs  time.rs  world.rs
core/dsp/: Cargo.toml
core/dsp/benches/: dsp_backends.rs
core/dsp/src/: assembler.rs  backend.rs  errors.rs  kernels.rs  lib.rs  motion.rs  profile.rs  report.rs  result.rs  service.rs  spectral.rs  stats.rs  window.rs
core/dsp/tests/: backend_failures.rs  conformance.rs
core/events/: Cargo.toml
core/events/src/: lib.rs
core/features/: Cargo.toml
core/features/src/: aggregate.rs  errors.rs  extractor.rs  lib.rs  profile.rs  report.rs  schema.rs  service.rs  spectral.rs  statistics.rs  stats.rs  vector.rs
core/features/tests/: extraction.rs
core/inference/: Cargo.toml
core/inference/src/: lib.rs
core/perception/: Cargo.toml
core/perception/src/: channel_change.rs  errors.rs  evidence.rs  lib.rs  observation.rs  profile.rs  service.rs  stats.rs
core/plugin-runtime/: Cargo.toml
core/plugin-runtime/src/: capability.rs  errors.rs  lib.rs  loader.rs  metadata.rs  plugin.rs  registry.rs  runtime.rs
core/plugins/: Cargo.toml
core/plugins/src/: lib.rs
core/runtime/: Cargo.toml
core/runtime/src/: calibration_service.rs  calibration_stats.rs  config.rs  context.rs  error.rs  health.rs  lib.rs  logging.rs  metrics.rs  runtime.rs  signal_store.rs
core/storage/: Cargo.toml
core/storage/src/: lib.rs
core/world/: Cargo.toml
core/world/src/: lib.rs
datasets/: README.md
datasets/fixtures/csi/: README.md  synthetic_dev_v1.ndjson
docs/adr/: 0001-rust-cpp-ffi-strategy.md  0002-versioned-csi-feature-schema.md  README.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts  eventStream.ts  types.ts
frontend/src/components/: Dashboard.test.tsx  Dashboard.tsx
frontend/src/components/charts/: Heatmap.tsx  LineChart.tsx
frontend/src/hooks/: useDashboard.ts
ml/: README.md  pyproject.toml
ml/src/aeryon_ml/: __init__.py  cli.py
ml/src/datasets/: __init__.py
ml/src/evaluation/: __init__.py
ml/src/export/: __init__.py
ml/src/training/: __init__.py
native/cpp-dsp/: CMakeLists.txt
native/cpp-dsp/include/aeryon/: dsp.h  dsp.hpp
native/cpp-dsp/src/: dsp.cpp
native/cpp-dsp/tests/: test_dsp.cpp
native/ffi/: Cargo.toml  build.rs
native/ffi/src/: lib.rs
plugins/csi-replay/: Cargo.toml
plugins/csi-replay/src/: config.rs  lib.rs  plugin.rs  stats.rs
plugins/synthetic-sensor/: Cargo.toml
plugins/synthetic-sensor/src/: config.rs  frame.rs  lib.rs  plugin.rs  signal.rs
scripts/: cargo-clippy.ps1  cargo-clippy.sh  cargo-fmt.ps1  cargo-fmt.sh  cargo-test.ps1  cargo-test.sh  cmake-build.ps1  cmake-build.sh  npm-dev.ps1  npm-dev.sh  npm-install.ps1  npm-install.sh  python-install.ps1  python-install.sh  verify-all.ps1  verify-all.sh
