[package]
name = "aeryon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for the Aeryon perception platform"

[[bin]]
name = "aeryon-cli"
path = "src/main.rs"

[dependencies]
aeryon-config = { path = "../../core/config" }
aeryon-plugins = { path = "../../core/plugins" }

[lints]
workspace = true
