[package]
name = "aeryon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for the Aeryon perception platform"

[[bin]]
name = "aeryon-cli"
path = "src/main.rs"

[dependencies]
aeryon-runtime = { path = "../../core/runtime" }
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
