[package]
name = "aeryon-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Service entry point for the Aeryon perception platform"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
aeryon-runtime = { path = "../../core/runtime" }
ctrlc = "3.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[lints]
workspace = true
