[package]
name = "aeryon-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Service entry point for the Aeryon perception platform"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
aeryon-calibration = { path = "../../core/calibration" }
aeryon-csi = { path = "../../core/csi" }
aeryon-domain = { path = "../../core/domain" }
aeryon-dsp = { path = "../../core/dsp" }
aeryon-features = { path = "../../core/features" }
aeryon-perception = { path = "../../core/perception" }
aeryon-events = { path = "../../core/events" }
aeryon-plugin-runtime = { path = "../../core/plugin-runtime" }
aeryon-runtime = { path = "../../core/runtime" }
aeryon-synthetic-sensor = { path = "../../plugins/synthetic-sensor" }
aeryon-csi-replay = { path = "../../plugins/csi-replay" }
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ctrlc = "3.4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"

[features]
default = []
cpp-dsp = ["aeryon-dsp/cpp-dsp", "aeryon-runtime/cpp-dsp"]

[dev-dependencies]
futures-util = "0.3"
http-body-util = "0.1"
tempfile = "3"
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
