[package]
name = "aeryon-csi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Canonical WiFi CSI frame types and development fixture format for Aeryon"
rust-version.workspace = true

[dependencies]
aeryon-domain = { path = "../domain" }
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
