[package]
name = "aeryon-dsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Temporal CSI windowing and baseline spectral DSP for Aeryon"
rust-version.workspace = true

[dependencies]
aeryon-calibration = { path = "../calibration" }
aeryon-csi = { path = "../csi" }
aeryon-domain = { path = "../domain" }
aeryon-events = { path = "../events" }
num-complex = "0.4"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
