[package]
name = "aeryon-events"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Typed in-process event bus for the Aeryon perception platform"
rust-version.workspace = true

[dependencies]
aeryon-domain = { path = "../domain" }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
