[package]
name = "aeryon-features"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Feature extraction for the Aeryon perception platform"
rust-version.workspace = true

[dependencies]
aeryon-calibration = { path = "../calibration" }
aeryon-csi = { path = "../csi" }
aeryon-domain = { path = "../domain" }
aeryon-dsp = { path = "../dsp" }
aeryon-events = { path = "../events" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
