[package]
name = "aeryon-perception"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Multi-sensor fusion for the Aeryon perception platform"
rust-version.workspace = true

[dependencies]
aeryon-domain = { path = "../domain" }
aeryon-events = { path = "../events" }
aeryon-features = { path = "../features" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
