[package]
name = "aeryon-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Application runtime for the Aeryon perception platform"
rust-version.workspace = true

[dependencies]
aeryon-domain = { path = "../domain" }
aeryon-events = { path = "../events" }
aeryon-plugin-runtime = { path = "../plugin-runtime" }
aeryon-calibration = { path = "../calibration" }
aeryon-csi = { path = "../csi" }
aeryon-dsp = { path = "../dsp" }
aeryon-synthetic-sensor = { path = "../../plugins/synthetic-sensor" }
aeryon-csi-replay = { path = "../../plugins/csi-replay" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
