cmake_minimum_required(VERSION 3.16)
project(aeryon-cpp-dsp VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_library(aeryon_dsp STATIC
    src/dsp.cpp
)

target_include_directories(aeryon_dsp
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
)

add_executable(aeryon_dsp_tests
    tests/test_dsp.cpp
)

target_link_libraries(aeryon_dsp_tests PRIVATE aeryon_dsp)

enable_testing()
add_test(NAME dsp_initialize COMMAND aeryon_dsp_tests)
