[package]
name = "aeryon-dsp-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Safe Rust FFI wrappers for Aeryon native C++ DSP kernels"
rust-version.workspace = true

[dependencies]
thiserror = "2"

[build-dependencies]
cmake = "0.1"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
