[package]
name = "aeryon-synthetic-sensor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Deterministic synthetic sensor plugin for Aeryon integration testing"
rust-version.workspace = true

[dependencies]
aeryon-domain = { path = "../../core/domain" }
aeryon-events = { path = "../../core/events" }
aeryon-plugin-runtime = { path = "../../core/plugin-runtime" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
